# Linked_List_Animation

./: Application.cpp  Application.h  CMakeLists.txt  README.md  System.cpp  System.h  main.cpp
Drawables/Arrowshape/: Arrowshape.cpp  Arrowshape.h
Drawables/EnumDrawables/: EnumDirection.h  EnumDrawables.h
Drawables/NodeShape/: NodeShape.cpp  NodeShape.h
Drawables/TextBox/: Cursor.h  Label.h  LetterObject.cpp  LetterObject.h  TextBox.cpp  TextBox.h
Font/: FontManager.cpp
LinkedList/: AnimatedLinkedList.cpp  AnimatedLinkedList.h  EnumListFunctions.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h
MouseEvents/: MouseEvents.cpp
System/EnumSystem/: EnumInputMode.h
